# SimpleChat

./: .gitignore  CMakeLists.txt  README.md  config.h  main.c  main.c.bak  user.h
ERROR/: error.c  error.h
MACRO/: logic.h  macro.h
SimpleChat/UI/: linux_ui.c  ui.h  win_ui.c
SimpleChat/UI/LINUX/: linux_ui.c  linux_ui.h
SimpleChat/WEB/: client.c  client.h  link.c
SimpleChat/WEB.bak/: client.c  client.h  link.c.bak
SimpleChat/WEB/ASYNCIO/: async_function.c  async_grammar.h  async_socket.c  asyncio.h  builtin.c  eventloop.c  init.c  message.c  va_func_def.h
SimpleChat/WEB/TOOLS/: link.c  link.h
c_include/: dictionary.h  error_interface.h  simple_tcp_connect.h
c_src/: dictionary.c  error_interface.c  simple_tcp_connect.c
c_works/source/: simple_tcp_connect.c
